--- a/mirrors/requirements.txt
+++ b/mirrors/requirements.txt
@@ -1,18 +1,21 @@
+anyio==3.5.0
 asgiref==3.4.1
 bidict==0.21.4
 certifi==2021.10.8
 click==8.0.3
 Cython==0.29.26
-fastapi==0.68.2
+fastapi==0.72.0
 h11==0.12.0
 httptools==0.3.0
+idna==3.3
 loguru==0.5.3
-pydantic==1.8.2
-python-engineio==4.3.0
-python-socketio==5.5.0
-pytomlpp==1.0.9
-starlette==0.14.2
-typing_extensions==4.0.0
-uvicorn==0.15.0
+pydantic==1.9.0
+python-engineio==4.3.1
+python-socketio==5.5.1
+pytomlpp==1.0.10
+sniffio==1.2.0
+starlette==0.17.1
+typing_extensions==4.0.1
+uvicorn==0.17.0
 uvloop==0.16.0
 websockets==10.1
