--- a/docs/deploy/docker-compose.yaml
+++ b/docs/deploy/docker-compose.yaml
@@ -1,19 +1,20 @@
-version: '3.9'
+version: "3.9"
 services:
+
   sockets:
+    image: fastapi_sockets:latest
     container_name: fastapi_sockets
     build: ./fastapi_sockets
-    environment:
-      TZ: Asia/Shanghai
     command: /bin/bash ./docker-entrypoint.sh
-    volumes:
-      - ./fastapi_sockets:/home/project
-      - ./conf/sockets/product.local.toml:/home/project/conf/product.local.toml
-      - ./logs/sockets:/home/logs
     networks:
       dev_net:
         ipv4_address: "172.20.5.13"
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./fastapi_sockets:/home/project
+      - ./conf/sockets/product.local.toml:/home/project/conf/product.local.toml
+      - ./logs/sockets:/home/logs
 
 networks:
   dev_net:
-      external: true
+    external: true
