--- a/mirrors/requirements-simple.txt
+++ b/mirrors/requirements-simple.txt
@@ -1,10 +1,19 @@
-Cython==0.29.26
-fastapi==0.72.0
-httptools==0.3.0
-loguru==0.5.3
-python-engineio==4.3.1
-python-socketio==5.5.1
-pytomlpp==1.0.19
-uvicorn==0.17.0
+## web
+fastapi==0.74.1
+uvicorn==0.17.5
+
+## speed
+Cython==0.29.28
+httptools==0.4.0
 uvloop==0.16.0
+
+## log
+loguru==0.6.0
+
+## TOML parse
+pytomlpp==1.0.10
+
+## socket.io
+python-engineio==4.3.1
+python-socketio==5.5.2
 websockets==10.1
