update require packages

--- a/mirrors/requirements.txt
+++ b/mirrors/requirements.txt
@@ -1,21 +1,19 @@
 anyio==3.6.1
-asgiref==3.5.2
 bidict==0.22.0
-certifi==2022.5.18.1
+certifi
 click==8.1.3
-Cython==0.29.30
-fastapi==0.78.0
+fastapi==0.85.0
 h11==0.13.0
-httptools==0.4.0
-idna==3.3
+httptools==0.5.0
+idna==3.4
 loguru==0.6.0
-pydantic==1.9.1
-python-engineio==4.3.2
-python-socketio==5.6.0
+pydantic==1.10.2
+python-engineio==4.3.4
+python-socketio==5.7.1
 pytomlpp==1.0.11
-sniffio==1.2.0
-starlette==0.19.1
-typing_extensions==4.2.0
-uvicorn==0.17.6
-uvloop==0.16.0
+sniffio==1.3.0
+starlette==0.20.4
+typing_extensions==4.3.0
+uvicorn==0.18.3
+uvloop==0.17.0
 websockets==10.3
