--- a/mirrors/requirements-simple.txt
+++ b/mirrors/requirements-simple.txt
@@ -1,11 +1,12 @@
 ## web
-fastapi==0.78.0
-uvicorn==0.17.6
+fastapi==0.85.0
+starlette==0.20.4
+pydantic==1.10.2
+uvicorn==0.18.3
 
 ## speed
-Cython==0.29.30
-httptools==0.4.0
-uvloop==0.16.0
+httptools==0.5.0
+uvloop==0.17.0
 
 ## log
 loguru==0.6.0
@@ -14,6 +15,6 @@ loguru==0.6.0
 pytomlpp==1.0.11
 
 ## socket.io
-python-engineio==4.3.2
-python-socketio==5.6.0
+python-engineio==4.3.4
+python-socketio==5.7.1
 websockets==10.3
